--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -9,9 +9,11 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=star_portal
+DB_USERNAME=
+DB_PASSWORD=
+DB_CHARSET=utf8mb4
+DB_COLLATION=utf8mb4_unicode_ci
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
