--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -24,12 +24,22 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/uikit.min.js",
+                "input": "./node_modules/uikit/dist/js",
+                "output": "./assets/js"
+              },
+              {
+                "glob": "**/uikit-icons.min.js",
+                "input": "./node_modules/uikit/dist/js",
+                "output": "./assets/js"
+              }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/scss/styles.scss"
             ],
-            "scripts": []
+            "scripts": [ ]
           },
           "configurations": {
             "production": {
@@ -83,7 +93,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.scss"
+              "src/scss/styles.scss"
             ],
             "scripts": [],
             "assets": [
